# cml-mcp

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  EXAMPLE_PROMPT.md  README.md  pyproject.toml
.claude/agents/: catalyst-center-engineer.md  catalyst-engineer.md  cml-lab-architect.md  firewall-engineer.md  ise-engineer.md  secure-by-design.md  splunk-engineer.md  testing-agent.md  windows-engineer.md  wireless-engineer.md
.github/workflows/: ci.yml
Cisco Validated Designs/: README.md
Cisco Validated Designs/Firewall SD-WAN/: design-brief.md  fmc-api-explorer-notes.md  links.md  runbook.md  topology.yaml
Custom Designs/: README.md  REBUILD.md  ROADMAP.md
Custom Designs/CatC Onboarding/: runbook.md  topology.yaml
Custom Designs/FMC-Managed FTD Registration/: runbook.md
Custom Designs/FTD Dual-ISP ECMP + Failover/: runbook.md
Custom Designs/Firepower SGT Enforcement/: runbook.md
Custom Designs/ISE NAC Lab/: runbook.md  topology.yaml
Custom Designs/ISE NAC Lab/modules/: dynamic-authz.md  (+3 more)
Custom Designs/Runbooks/: README.md  _scaffold.py  catalog.json
Custom Designs/SD-Access Fabric/: runbook.md  topology.yaml
Custom Designs/SD-Access ISE Integration/: PLAN.md  runbook.md
Custom Designs/Secure Firewall SD-WAN Auto-VPN/: runbook.md
Custom Designs/Windows DC Foundation/: runbook.md
Custom Designs/Wireless NAC/: runbook.md
Test Plans/: README.md  _TEMPLATE.md
Test Plans/Lab Designs/: firepower-sgt-enforcement.md  firewall-sdwan.md  ise-nac-lab.md  rapid-threat-containment.md  secure-firewall-observability.md  security-intelligence-blocking.md  wireless-nac.md
Test Plans/MCP Servers/: cml-mcp.md  firepower-mcp.md  ise-mcp.md  splunk-mcp.md  windows-mcp.md  wlc-mcp.md
Test Reports/: README.md  _TEMPLATE.md  render_pdf.py  run_report.py
Test Reports/2026-07-15/: report.md  results.json
Test Reports/2026-07-16/: report.md  results.json
Test Reports/2026-07-17/: report-C6-IPS-RTC.html  report-C6-IPS-RTC.md  report-C7-SI.html  report-C7-SI.md  report.html  report.md  results-C6.json  results-C7.json  results.json
Test Reports/2026-07-18/: report.html  report.md  results.json
src/cml_mcp/: __init__.py  client.py  config.py  pyats_manager.py  screenshots.py  server.py
tests/: firepower_e2e_test.py  labspec_e2e_test.py  pyats_e2e_test.py  smoke_test.py  test_client_unit.py  test_labspec_unit.py
(+126 files in other folders)
