[project]
name = "cml-mcp"
version = "0.1.0"
description = "MCP server for Cisco Modeling Labs (CML) - full REST API coverage"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "pyats[library]>=26.6",
]

[project.scripts]
cml-mcp = "cml_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cml_mcp"]
