[project]
name = "cml-mcp"
version = "0.1.0"
description = "MCP server for Cisco Modeling Labs (CML) - full REST API coverage"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "pyats[library]>=26.6",
]

[project.optional-dependencies]
# Headless-browser screenshots of the CML/device web UIs. After installing,
# fetch the browser binary once: `uv run playwright install chromium`.
browser = ["playwright>=1.40"]

[project.scripts]
cml-mcp = "cml_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cml_mcp"]

[tool.pytest.ini_options]
# Only collect the CML-free unit tests (test_*.py). The live suites are named
# *_test.py (smoke_test.py, *_e2e_test.py) and are run directly.
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::ResourceWarning"]

[tool.ruff]
line-length = 100
